{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 183,
  "lineage": "9150e72e-d746-85cd-de0c-5c98deedb89e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:vpc/vpc-0b1e253ed1635acf0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0eef5f2855872e936",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a5ffa159cfad5d9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1e253ed1635acf0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024b6b0447c37618a",
            "owner_id": "958948421283",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"1\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:subnet/subnet-0a223e7c061501529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a223e7c061501529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958948421283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "vpc_id": "vpc-0b1e253ed1635acf0"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06a974f9b8a97ecf2",
            "arn": "arn:aws:ec2:us-west-2:958948421283:instance/i-0d9c8f24e7110d775",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9c8f24e7110d775",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0daae9108f1b48e3e",
            "private_dns": "ip-172-31-58-106.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.58.106",
            "public_dns": "ec2-35-84-199-85.us-west-2.compute.amazonaws.com",
            "public_ip": "35.84.199.85",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cfb400992f50bf07",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance-1-20251001055837329100000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a223e7c061501529",
            "tags": {
              "Backup": "true",
              "Name": "instance-1"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-1",
              "Project": "ec2-auto-backup"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Backup": "true",
              "Name": "instance-1"
            },
            "vpc_security_group_ids": [
              "sg-0c75ab727e38aaff9"
            ]
          },
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group/sg-0c75ab727e38aaff9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c75ab727e38aaff9",
            "ingress": [],
            "name": "instance-1-20251001055837329100000003",
            "name_prefix": "instance-1-",
            "owner_id": "958948421283",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "true",
              "Name": "instance-1"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-1",
              "Project": "ec2-auto-backup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e253ed1635acf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"1\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-02d72e2c051ded11f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-02d72e2c051ded11f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0c75ab727e38aaff9",
            "security_group_rule_id": "sgr-02d72e2c051ded11f",
            "tags": {
              "Backup": "true",
              "Name": "instance-1-ipv4_default"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-1-ipv4_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-0cbdb37fbb8e6d77e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0cbdb37fbb8e6d77e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0c75ab727e38aaff9",
            "security_group_rule_id": "sgr-0cbdb37fbb8e6d77e",
            "tags": {
              "Backup": "true",
              "Name": "instance-1-ipv6_default"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-1-ipv6_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"2\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:subnet/subnet-0a223e7c061501529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a223e7c061501529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958948421283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "vpc_id": "vpc-0b1e253ed1635acf0"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06a974f9b8a97ecf2",
            "arn": "arn:aws:ec2:us-west-2:958948421283:instance/i-096bed1dfb6665fc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096bed1dfb6665fc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dab98a421f890a03",
            "private_dns": "ip-172-31-55-46.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.55.46",
            "public_dns": "ec2-35-86-226-21.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.226.21",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a7fb3fdf755548d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance-2-20251001055737537200000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a223e7c061501529",
            "tags": {
              "Backup": "true",
              "Name": "instance-2"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-2",
              "Project": "ec2-auto-backup"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Backup": "true",
              "Name": "instance-2"
            },
            "vpc_security_group_ids": [
              "sg-050d7ab9d8e0ea9ef"
            ]
          },
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group/sg-050d7ab9d8e0ea9ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050d7ab9d8e0ea9ef",
            "ingress": [],
            "name": "instance-2-20251001055737537200000002",
            "name_prefix": "instance-2-",
            "owner_id": "958948421283",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "true",
              "Name": "instance-2"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-2",
              "Project": "ec2-auto-backup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e253ed1635acf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"2\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-0b7a82ff245debf70",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0b7a82ff245debf70",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-050d7ab9d8e0ea9ef",
            "security_group_rule_id": "sgr-0b7a82ff245debf70",
            "tags": {
              "Backup": "true",
              "Name": "instance-2-ipv4_default"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-2-ipv4_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-02fca634f3825373a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-02fca634f3825373a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-050d7ab9d8e0ea9ef",
            "security_group_rule_id": "sgr-02fca634f3825373a",
            "tags": {
              "Backup": "true",
              "Name": "instance-2-ipv6_default"
            },
            "tags_all": {
              "Backup": "true",
              "Environment": "dev",
              "Name": "instance-2-ipv6_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"3\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:subnet/subnet-0a223e7c061501529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a223e7c061501529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958948421283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "vpc_id": "vpc-0b1e253ed1635acf0"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"3\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06a974f9b8a97ecf2",
            "arn": "arn:aws:ec2:us-west-2:958948421283:instance/i-08dc52e9026e8d306",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dc52e9026e8d306",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a42c84e64fed0a50",
            "private_dns": "ip-172-31-50-253.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.50.253",
            "public_dns": "ec2-34-222-173-177.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.173.177",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093092438d4f8e197",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "instance-3-20251001055737437400000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a223e7c061501529",
            "tags": {
              "Backup": "false",
              "Name": "instance-3"
            },
            "tags_all": {
              "Backup": "false",
              "Environment": "dev",
              "Name": "instance-3",
              "Project": "ec2-auto-backup"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Backup": "false",
              "Name": "instance-3"
            },
            "vpc_security_group_ids": [
              "sg-0493ccec2f035f62b"
            ]
          },
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"3\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group/sg-0493ccec2f035f62b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0493ccec2f035f62b",
            "ingress": [],
            "name": "instance-3-20251001055737437400000001",
            "name_prefix": "instance-3-",
            "owner_id": "958948421283",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "false",
              "Name": "instance-3"
            },
            "tags_all": {
              "Backup": "false",
              "Environment": "dev",
              "Name": "instance-3",
              "Project": "ec2-auto-backup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e253ed1635acf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"3\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-02cce3421e9800ab6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-02cce3421e9800ab6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0493ccec2f035f62b",
            "security_group_rule_id": "sgr-02cce3421e9800ab6",
            "tags": {
              "Backup": "false",
              "Name": "instance-3-ipv4_default"
            },
            "tags_all": {
              "Backup": "false",
              "Environment": "dev",
              "Name": "instance-3-ipv4_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:958948421283:security-group-rule/sgr-066b6eabb3b2bffbe",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-066b6eabb3b2bffbe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0493ccec2f035f62b",
            "security_group_rule_id": "sgr-066b6eabb3b2bffbe",
            "tags": {
              "Backup": "false",
              "Name": "instance-3-ipv6_default"
            },
            "tags_all": {
              "Backup": "false",
              "Environment": "dev",
              "Name": "instance-3-ipv6_default",
              "Project": "ec2-auto-backup"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}